--- a/css/estilos.css
+++ b/css/estilos.css
@@ -20,17 +20,21 @@
     color: #36A0FF;
 }
 a{
+    font-family: 'Kanit', sans-serif;
     text-decoration: none;
     color: black;
     
 }
 b{
+    font-family: 'Kanit', sans-serif;
     font-size: 30px;
 }
 p{
-    font-size: 30px;
+    font-family: 'Kanit', sans-serif;
+    font-size: 20px;
 }
 .titulo{
+    font-family: 'Kanit', sans-serif;
     font-size: 50px;
 }
 .titulo--inicio{
@@ -269,7 +273,14 @@ p{
     border-radius: 4%;
     box-shadow: 0px 5px 5px rgba(57, 57, 128, 0.751);
     margin-left: 1%;
+    font-size: 20px;
+    font-weight: bold;  
 }
+
+.botton--empecemos a{
+    color: rgba(240, 248, 255, 0.905);
+}
+
 .botton--empecemos:hover{
     font-size: 30px;
     transition: all 0.4s;
