--- a/css/estilos.css
+++ b/css/estilos.css
@@ -242,26 +242,29 @@ p{
 /* ------------- MODIFICACIONES PARA BOTON DE CONTACTO EN PAGINA PREGUNTAS ------------ */
 .botton_contacto{
     
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    color: black;
-    min-width: 15%;
-    height: 50px;
     background-color: #00A19D;
+    height: fit-content;
+    width: fit-content;
+    text-align: center;
+    text-justify: distribute;
     padding: 2%;
     border-radius: 4%;
-    box-shadow: 2px 5px 5px rgba(57, 57, 128, 0.751);
-    margin-left: 5%;  
+    box-shadow: 0px 5px 5px rgba(57, 57, 128, 0.751);
+    margin-left: 1%;
+    font-size: 20px;
+    font-weight: bold;  
 }
 
 .botton_contacto a{
     width: 100%;
     height: 30px;
-    text-align: center;
-    text-justify: distribute;
+    color: rgba(240, 248, 255, 0.905);
 }
+
+
+
+
+
 /* ------------- MODIFICACIONES PARA BOTON A CURSOS (HEADER DEL INICIO) ------------ */
 .botton--empecemos{
     background-color: #00A19D;
