Modificando html para SEO

--- a/Styles/_footer.scss
+++ b/Styles/_footer.scss
@@ -30,15 +30,15 @@
 
 
 .botton--instagram{
-    background-image: url(../images/instagram-01.png);
+    background-image: url(../assets/images/instagram-01.png);
 }
 .botton--facebook{
-    background-image: url(../images/FACEBOOK-01.png);
+    background-image: url(../assets/images/FACEBOOK-01.png);
 }
 
 .botton--inicio{
-    background-image: url(../images/LOGO.png);
+    background-image: url(../assets/images/LOGO.png);
 }
 .botton--youtube{
-    background-image: url(../images/wpp-01.png);
+    background-image: url(../assets/images/wpp-01.png);
 }
