--- a/Styles/_media.scss
+++ b/Styles/_media.scss
@@ -19,7 +19,7 @@
                 grid-template-areas: 
                 "sideBut logo"
                 "empecemos empecemos";
-                background-image: url(../images/Banner.jpg);
+                background-image: url(../assets/images/Banner.jpg);
                 background-repeat: none;
                 background-size: cover;
                 background-position: 57% 60%;
