CAMBIANDO FORMATO FOTOS

--- a/Styles/_media.scss
+++ b/Styles/_media.scss
@@ -89,7 +89,7 @@
     /* =========================HEAD UNICAMENTE PARA EL INDEX============================== */
    
     .head--inicio{
-        background-image: url(../assets/images/BannerInicio-LOW.jpg);
+        background-image: url(../assets/images/BannerInicio-HIGH.webp);
 
         min-height: 60vh;
         display: grid;
