--- a/Styles/_header.scss
+++ b/Styles/_header.scss
@@ -42,7 +42,7 @@
 }
 /* ------------- MODIFICACIONES PARA  INICIO------------ */
                 .head--inicio{
-                    background-image: url(../assets/images/BannerInicio-HIGH.jpg);
+                    background-image: url(../assets/images/BannerInicio-HIGH.webp);
                     min-height: 90vh;
                     color: rgb(252, 255, 255);
                     text-shadow: 1px 1px 1px  $CelesteTrans;
